--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
   },
+
+  "engines": {
+    "node": "7.7.2"
+  },
+  
   "author": "",
   "license": "ISC"
 }
