--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
   "scripts": {
     "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "node client/app.js"
   },
 
   "engines": {
     "node": "7.7.2"
   },
-  
+
   "author": "",
   "license": "ISC"
 }
