--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "battleships3",
   "version": "1.0.0",
   "description": "",
-  "main": "webpack.config.js",
+  "main": "app.js",
   "dependencies": {},
   "devDependencies": {
     "webpack": "^4.32.1",
@@ -11,7 +11,7 @@
   "scripts": {
     "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node client/app.js"
+    "start": "node app.js"
   },
 
   "engines": {
